# pac-man

./: .flake8  .gitignore  Makefile  README.md  config.json  main.py  pac-man.py  packaging.sh  pyproject.toml
docs/: choices.md  team.md  timeline.md
pacman/: audio.py  config.py  constants.py  engine.py  game.py  ghosts.py  highscores.py  items.py  player.py
pacman/render/: animator.py  loader.py  renderer.py
pacman/scenes/: base.py  game_over.py  game_scene.py  highscore.py  instructions.py  leaderboard_entry.py  menu.py  options.py  overlay.py  pause.py  victory.py
